# libKCD2

./: .gitignore  .gitmodules  README.md
.buildenv/: CMakeLists.txt  CMakePresets.json  CrySDKStubs.cpp  PCH.h  check_sizes.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
Projects/Autobrew/.buildenv/: CMakeLists.txt
Projects/CompassOverhaul/.buildenv/: CMakeLists.txt
Projects/ConsoleRpgParam/.buildenv/: CMakeLists.txt
Projects/MCM/: README.md
Projects/MCM/.buildenv/: CMakeLists.txt
include/: REL.h  kcd.h
include/KCSE/: KCSEAPI.h  Trampoline.h
include/Offsets/: Offsets.h  Offsets_RTTI.h  Offsets_VTABLE.h  RTTI.h
include/REL/: ID.h  Module.h  Offset.h  Relocation.h
include/Scaleform/: GASString.h  GFxLoadQueueEntry.h  GFxMovieRoot.h  GFxMovieView.h  GFxStateBag.h  GRefCountImplCore.h
include/animationmodule/: C_ActionDatabaseGenerated.h  C_AnimationDatabaseBase.h  C_AnimationDatabaseGenerated.h  C_CallbackAction.h  C_LookAimIK.h  C_ObjectAnimationDatabaseGenerated.h  I_AdbChangeListener.h  I_QueryableDatabase.h  I_SceneListener.h
include/combatmodule/: C_CombatActionAttackFactory.h  C_CombatActionFactoryBase.h  C_CombatActionHelper.h  C_CombatActionTrigger.h  C_CombatActionTriggerData.h  C_CombatActionTypeData.h  C_CombatActionTypeDataDestination.h  C_CombatActionTypeDataSource.h  C_CombatActionTypeGroupData.h  C_CombatActor.h  C_CombatActorAction.h  C_CombatActorActionAttack.h  C_CombatActorActionBlock.h  C_CombatActorActionBlockTrigger.h  C_CombatActorActionDodge.h  C_CombatActorActionFailedAttack.h  C_CombatActorActionFreeBlock.h  C_CombatActorActionGuard.h  C_CombatActorActionGuardMovement.h  C_CombatActorActionGuardSyncMovement.h  C_CombatActorActionGuardVar.h  C_CombatActorActionHit.h  C_CombatActorActionManager.h  C_CombatActorActionPerfectBlock.h  C_CombatActorActionPerfectBlockBase.h  C_CombatActorActionPoseModifier.h  C_CombatActorActionRiderMovement.h  C_CombatActorActionStaticAttack.h  C_CombatActorActionSyncAttack.h  C_CombatActorActionSyncHit.h  C_CombatActorActionSyncPerfectBlock.h  C_CombatActorActionSyncPerfectBlockHit.h  C_CombatActorActionSyncTransition.h  C_CombatActorAnimCollisions.h  C_CombatActorAnimatedAction.h  C_CombatActorCollisions.h  C_CombatActorDirector.h  C_CombatActorHorsePullDown.h  C_CombatActorHuntAttack.h  C_CombatActorMercyKill.h  (+139 more)
include/conceptmodule/: C_AutoTriggerable.h  C_ConceptModule.h  C_Effect.h  C_EventNode.h  C_ModuleBase.h  C_Node.h  C_NodeManager.h  C_PortRef.h  C_RuntimeState.h  C_SharedResource.h  C_SoulEffect.h  C_StateProxy.h  C_TemplatedNode.h  C_TypedArrayPortRef.h  C_TypedPortRef.h  I_Port.h  S_Trigger.h
include/crysystem/: CCryAction.h  CEntity.h  CEntitySystem.h  CMovieSystem.h  CScriptSystem.h  CScriptTable.h  CScriptableBase.h  CSystem.h  CXConsole.h  EntityEventListenerWithCleanup.h  IEntitySystemSink.h  SCameraParams.h  SSystemGlobalEnvironment.h  SUserFunctionDesc.h  ScriptAnyValue.h  functor.h
include/databasemodule/: C_DatabaseModule.h  C_DynamicEnumManager.h  C_ObjectDatabase.h  C_ObjectDatabaseBase.h  C_ObjectDatabaseDefaultKeyExtractor.h  C_ObjectDatabaseGenerated.h  C_ObjectDatabaseIdIndexed.h  C_ObjectDatabaseKeyIndexed.h  C_ObjectDatabaseKeyMultiIndexed.h  C_ObjectDatabaseManager.h  C_ObjectDatabaseSortedIdIndexed.h  C_ObjectTableDatabase.h  C_ObjectTreeDatabase.h  C_ObjectTreeDatabaseList.h  I_DatabaseListener.h  I_DatabaseModule.h  I_DynamicEnum.h  I_ObjectDatabase.h
include/dialogmodule/: C_AnimatedCamera.h  C_AnimationCommand.h  C_AnimationHeadCommand.h  C_AnimationPropCommand.h  C_BarberExtensionController.h  C_CameraCommand.h  C_Command.h  C_Decision.h  C_DialogCamera.h  C_DialogCameraManager.h  C_DialogFunctionExpression.h  C_DialogInstance.h  C_DialogInteraction.h  C_DialogManager.h  C_DialogModule.h  C_Dialogue.h  C_DialogueAttachmentDatabaseGenerated.h  C_DialogueAttachmentPreprocessor.h  C_DialogueAttachmentProceduralClip.h  C_DialogueBarberExtension.h  C_DialogueDataManager.h  C_DialogueDubbingDatabase.h  C_DialogueFunctionsDatabase.h  C_DialogueHaggleExtension.h  C_DialogueMapPlayerPositionExtension.h  C_DialogueNode.h  C_DialogueNodeEEFunction.h  C_DialogueProp.h  C_DialogueSequenceHolder.h  C_DialogueShieldPaintingExtension.h  C_DialogueTimingDatabaseGenerated.h  C_DialogueTimingPreprocessor.h  C_DialogueWrapper.h  C_FacialMoodCommand.h  C_FaderDialogueNode.h  C_ForcedDialogueNode.h  C_FunctionEnum.h  C_FunctionExtensionAccepted.h  C_FunctionPort.h  C_FunctionSequenceUsed.h  (+39 more)
include/entitymodule/: C_Actor.h  C_ActorBounds.h  C_ActorMoveParams.h  C_AlchemyTable.h  C_AmmoRuntimeData.h  C_Animal.h  C_ArmorRuntimeData.h  C_AuxLightAttachment.h  C_BoneSlotSystem.h  C_ConsumableRuntimeData.h  C_DisableAlchemyTable.h  C_DocumentItem.h  C_EquipmentManager.h  C_EquippableItemRuntimeData.h  C_Horse.h  C_Human.h  C_IdleState.h  C_Inventory.h  C_InventoryBase.h  C_InventoryManager.h  C_Item.h  C_ItemCollection.h  C_ItemDatabase.h  C_ItemHolder.h  C_ItemManager.h  C_KeyRuntimeData.h  C_MeleeWeaponRuntimeData.h  C_MissileWeaponPlayerController.h  C_MissileWeaponRuntimeData.h  C_PhysicsIgnoreLists.h  C_PickableItem.h  C_Player.h  C_PlayerMaterialEffects.h  C_ScriptBindActor.h  C_ScriptBindHorse.h  C_ScriptBindHuman.h  C_ScriptBindInventory.h  C_ScriptBindItemManager.h  C_ScriptBindPlayer.h  C_StanceState.h  (+25 more)
include/environmentmodule/: CFlowNodeHDRPreset.h  CFlowNode_Weather.h  C_EnvironmentModule.h  C_FunctionIsRaining.h  C_LightEffectVec.h  C_MaterialEffectFloat.h  C_MaterialEffectVec.h  C_MoonEffect.h  C_PickableAreaDatabase.h  C_PickableAreaMaterialDatabase.h  C_Rain.h  C_RespawnManager.h  C_ScriptBindEnvironment.h  C_StreamingHelper.h  C_SunEffect.h  C_TimeOfDayProfile.h  C_VisualEffect.h  C_VisualEffectManager.h  C_WeatherProfileDatabase.h  C_WeatherSystem.h  IWeatherSystem.h  I_RespawnManager.h  I_VisualEffect.h
include/framework/: CStateMachine.h  C_Action.h  C_ActionDirector.h  C_BaseModule.h  C_CryLoadGameHelper.h  C_CrySaveGameHelper.h  C_EEExpression.h  C_ExpressionEngine.h  C_Listeners.h  C_LocalizedString.h  C_ModelArrayProperty.h  C_Signal.h  (+47 more)
(+1191 files in other folders)
